# keystore_provisioning_tool

./: .gitmodules  CMakeLists.txt  README.md  build.sh  config.h  keysExample.xml  run.sh  system_config.h  xmlParser.py
configs/include/: KeyStore_Config.h
src/: CMakeLists.txt  FileNVM.c  FileNVM.h  KeyStoreInit.c  KeyStoreInit.h  keyStoreProvisioningTool.c  keystore_config.h
src/app/: keyStoreProvisioningTool.c
src/util/: FileNVM.c  KeyStoreInit.h
